--- a/Question_1.ipynb
+++ b/Question_1.ipynb
@@ -23,7 +23,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 1,
             "source": [
                 "import pandas as pd\n"
             ],
@@ -32,7 +32,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 101,
+            "execution_count": 2,
             "source": [
                 "# create dictionary of employee data and initialize dataframe, df\n",
                 "# Set Null value as 0\n",
@@ -121,14 +121,14 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 101
+                    "execution_count": 2
                 }
             ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 102,
+            "execution_count": 3,
             "source": [
                 "# Create a helper function to compare salaries\n",
                 "# If Manager_id == 0 (Does not have manager): return False\n",
@@ -144,7 +144,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 103,
+            "execution_count": 4,
             "source": [
                 "# Apply the helper function into the dataframe, set axis = 1 to apply function on rows\n",
                 "# get the value and create a list to store the answer under \"result\"\n",
@@ -166,23 +166,42 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## Q1a: The following employees have salaries higher than their immediate managers': ['Joe', 'Dan']\n",
+                "## Q1a: The following employees have salaries higher than their immediate managers': ['Sally', 'Joe', 'Dan']\n",
                 "---"
             ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": null,
-            "source": [],
-            "outputs": [],
+            "execution_count": 5,
+            "source": [
+                "# Create column \"is_manager\" and set all to False\n",
+                "df['is_manager'] = False\n",
+                "\n",
+                "# Iterate through each row and find the employee's corresponding manager and set \"is_manager\" to True\n",
+                "for index, row in df.iterrows():\n",
+                "    df.loc[row.Manager_id, \"is_manager\"] = True\n",
+                "\n",
+                "# Find average salary of non-managerial employees \n",
+                "average_salary = df[df.apply(lambda x: x.is_manager == False, axis=1)].Salary.mean()\n",
+                "print(f\"The average salary of employees who do not manage anyone: ${average_salary}\")"
+            ],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "The average salary of employees who do not manage anyone: $425.0\n"
+                    ]
+                }
+            ],
             "metadata": {}
         },
         {
-            "cell_type": "code",
-            "execution_count": null,
-            "source": [],
-            "outputs": [],
+            "cell_type": "markdown",
+            "source": [
+                "## Q1b: The average salary of employees who do not manage anyone: $425.0"
+            ],
             "metadata": {}
         }
     ],
