Complete Question 1 (answers in description)
Answers:
1a. Sally, Joe, Dan
1b. Average salary: $425

--- a/Question_1.ipynb
+++ b/Question_1.ipynb
@@ -200,7 +200,8 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## Q1b: The average salary of employees who do not manage anyone: $425.0"
+                "## Q1b: The average salary of employees who do not manage anyone: $425.0\n",
+                "---"
             ],
             "metadata": {}
         }
