Tidy up Question 1 file

--- a/Question_1.ipynb
+++ b/Question_1.ipynb
@@ -200,7 +200,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## Q1b: The average salary of employees who do not manage anyone: $425.0\n",
+                "## Q1b: The average salary of employees who do not manage anyone: $425.0.\n",
                 "---"
             ],
             "metadata": {}
