--- a/Question_4.ipynb
+++ b/Question_4.ipynb
@@ -767,12 +767,13 @@
                 "mean_stock_return = portfolio_parametric[['AAPL log_returns', 'IBM log_returns', 'GOOG log_returns', 'BP log_returns', 'XOM log_returns', 'COST log_returns', 'GS log_returns']].mean()\n",
                 "# mean_stock_return\n",
                 "\n",
+                "# [\"AAPL\", \"IBM\", \"GOOG\", \"BP\", \"XOM\", \"COST\", \"GS\"]\n",
                 "# Convert mean log returns to mean perc returns before getting the weighted mean\n",
                 "returns = np.exp(mean_stock_return.values) - 1\n",
                 "mean_return = np.dot(weights, returns)\n",
                 "\n",
                 "# Convert back to weighted mean log returns\n",
-                "mean_log_returns = np.log(1+mean_return)\n",
+                "mean_log_returns = np.log(1 + mean_return)\n",
                 "weighted_mean = mean_log_returns\n",
                 "\n",
                 "weighted_mean"
@@ -800,7 +801,7 @@
                 "mat_df = portfolio_parametric[['AAPL log_returns', 'IBM log_returns', 'GOOG log_returns', 'BP log_returns', 'XOM log_returns', 'COST log_returns', 'GS log_returns']].values\n",
                 "vcv = np.cov(mat_df.T)\n",
                 "# Convert variance-covariance matrix\n",
-                "vcv_perc = np.exp(vcv)-1\n",
+                "vcv_perc = np.exp(vcv) - 1\n",
                 "vcv_perc"
             ],
             "outputs": [
