--- a/Question_1.ipynb
+++ b/Question_1.ipynb
@@ -23,7 +23,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 2,
             "source": [
                 "import pandas as pd\n"
             ],
@@ -32,7 +32,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 3,
             "source": [
                 "# create dictionary of employee data and initialize dataframe, df\n",
                 "# Set Null value as 0\n",
@@ -121,14 +121,14 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 2
+                    "execution_count": 3
                 }
             ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 4,
             "source": [
                 "# Create a helper function to compare salaries\n",
                 "# If Manager_id == 0 (Does not have manager): return False\n",
@@ -144,7 +144,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 5,
             "source": [
                 "# Apply the helper function into the dataframe, set axis = 1 to apply function on rows\n",
                 "# get the value and create a list to store the answer under \"result\"\n",
@@ -173,17 +173,23 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 9,
             "source": [
                 "# Create column \"is_manager\" and set all to False\n",
-                "df['is_manager'] = False\n",
+                "def findManager(df):\n",
+                "    df['is_manager'] = False\n",
+                "    # Iterate through each row and find the employee's corresponding manager and set \"is_manager\" to True\n",
+                "    for index, row in df.iterrows():\n",
+                "        df.loc[row.Manager_id, \"is_manager\"] = True\n",
+                "    return df\n",
                 "\n",
-                "# Iterate through each row and find the employee's corresponding manager and set \"is_manager\" to True\n",
-                "for index, row in df.iterrows():\n",
-                "    df.loc[row.Manager_id, \"is_manager\"] = True\n",
+                "def getAvgSalary(df):\n",
+                "    # Find average salary of non-managerial employees \n",
+                "    average_salary = df[df.apply(lambda x: x.is_manager == False, axis=1)].Salary.mean()\n",
+                "    return average_salary\n",
                 "\n",
-                "# Find average salary of non-managerial employees \n",
-                "average_salary = df[df.apply(lambda x: x.is_manager == False, axis=1)].Salary.mean()\n",
+                "df = findManager(df)\n",
+                "average_salary = getAvgSalary(df)\n",
                 "print(f\"The average salary of employees who do not manage anyone: ${average_salary}\")"
             ],
             "outputs": [
@@ -207,7 +213,79 @@
         },
         {
             "cell_type": "markdown",
+            "source": [
+                "## I have added more rows and data to test my code\n",
+                "| id | Name      | Salary | manager_id |\n",
+                "|----|-----------|--------|------------|\n",
+                "| 1  | John      | 300    | 3          |\n",
+                "| 2  | Mike      | 200    | 3          |\n",
+                "| 3  | Sally     | 550    | 4          |\n",
+                "| 4  | Jane      | 500    | 7          |\n",
+                "| 5  | Joe       | 600    | 7          |\n",
+                "| 6  | Dan       | 600    | 3          |\n",
+                "| 7  | Phil      | 550    | NULL       |\n",
+                "| 8  | Mark      | 320    | 7          |\n",
+                "| 9  | Ben       | 530    | 7          |\n",
+                "| 10 | Frank     | 400    | 3          |\n",
+                "| 11 | Alice     | 500    | 4          |\n",
+                "| 12 | Bob       | 300    | 4          |\n",
+                "| 13 | Rachel    | 450    | 3          |\n",
+                "| 14 | Daniel    | 600    | 3          |\n",
+                "| 15 | Charmaine | 550    | 4          |"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
             "source": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 15,
+            "source": [
+                "# Include this if you have not downloaded the dependency\n",
+                "# !pip install openpyxl\n",
+                "df_1 = pd.read_excel('Q1_sample.xlsx')\n",
+                "\n",
+                "result_1 = df_1[df_1.apply(compareSalary, axis=1)]['Name'].values.tolist()\n",
+                "print(f\"The following employees have salaries higher than their immediate managers': {result_1}\")"
+            ],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "The following employees have salaries higher than their immediate managers': ['Sally', 'Joe', 'Dan', 'Daniel', 'Charmaine']\n"
+                    ]
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 17,
+            "source": [
+                "df_1 = findManager(df_1)\n",
+                "average_salary_1 = getAvgSalary(df_1)\n",
+                "print(f\"The average salary of employees who do not manage anyone: ${average_salary_1}\")"
+            ],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "The average salary of employees who do not manage anyone: $460.8333333333333\n"
+                    ]
+                }
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [],
+            "outputs": [],
             "metadata": {}
         }
     ],
